recursion.cons.lessons.recursion.cons.Last.scala.error
last:2: error: value lentgh is not a member of List[Int]
	if (l.tail.lentgh == 0)
                   ^