recursion.cons.lessons.recursion.cons.Last.scala.code
def last(l:List[Int]): Int = {
	if (l.tail.lentgh == 0)
		return l.head
	else last(l.tail)
}
